[gd_scene load_steps=6 format=3 uid="uid://b8v1k2gqb3b2w"]

[ext_resource type="Texture2D" uid="uid://cvjp578yskg1i" path="res://FlappyBirdAssets/Sprites/groundSnow.png" id="1_au3k8"]
[ext_resource type="Script" uid="uid://cb5djtkecm1lj" path="res://scenes/ground/ground.gd" id="1_rrkwn"]
[ext_resource type="AudioStream" uid="uid://dnm5b6pojwpjl" path="res://FlappyBirdAssets/Audio/sfx_die.wav" id="3_xmv3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrkwn"]
size = Vector2(808, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au3k8"]
size = Vector2(808, 70)

[node name="Ground" type="Node2D"]
position = Vector2(398, -2)
script = ExtResource("1_rrkwn")

[node name="Ground1" type="Area2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(404, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ground1"]
unique_name_in_owner = true
texture = ExtResource("1_au3k8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
shape = SubResource("RectangleShape2D_rrkwn")

[node name="Ground2" type="Area2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(1212, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
texture = ExtResource("1_au3k8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
shape = SubResource("RectangleShape2D_au3k8")
debug_color = Color(0.8991941, 0.2352041, 0.530341, 0.41960785)

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xmv3o")
bus = &"SFX"

[connection signal="body_entered" from="Ground1" to="." method="_on_ground_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_ground_body_entered"]
